tests/baselines/reference/numericLiteralsWithTrailingDecimalPoints01.errors.txt
tests/cases/compiler/numericLiteralsWithTrailingDecimalPoints01.ts(3,3): error TS1005: ';' expected.
tests/cases/compiler/numericLiteralsWithTrailingDecimalPoints01.ts(9,15): error TS1005: ',' expected.
tests/cases/compiler/numericLiteralsWithTrailingDecimalPoints01.ts(9,23): error TS1005: '=' expected.
tests/cases/compiler/numericLiteralsWithTrailingDecimalPoints01.ts(9,24): error TS1109: Expression expected.


==== tests/cases/compiler/numericLiteralsWithTrailingDecimalPoints01.ts (4 errors) ====
    1..toString();
    1.0.toString();
    1.toString();
      ~~~~~~~~
!!! error TS1005: ';' expected.
    1.+2.0 + 3. ;
    
    // Preserve whitespace where important for JS compatibility
    var i: number = 1;
    var test1 = i.toString();  
    var test2 = 2.toString();
                  ~~~~~~~~
!!! error TS1005: ',' expected.
                          ~
!!! error TS1005: '=' expected.
                           ~
!!! error TS1109: Expression expected.
    var test3 = 3 .toString();
    var test4 = 3    .toString();
    var test5 = 3	.toString(); 
    var test6 = 3.['toString']();
    var test7 = 3
    .toString();
    var test8 = new Number(4).toString();
    var test9 = 3. + 3.
    